--- a/MauiXamlSourceGen.csproj
+++ b/MauiXamlSourceGen.csproj
@@ -42,6 +42,8 @@
 
 		<!-- Needed for XAML Source Generation -->
 		<EnablePreviewFeatures>true</EnablePreviewFeatures>
+		<!-- Allows you to see the XAML source generation output -->
+		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -63,7 +65,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.60-ci.main.25176.16" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
 	</ItemGroup>
 
